[gd_scene load_steps=4 format=3 uid="uid://4xesrxwdqtv7"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_h2oc5"]

[sub_resource type="Theme" id="Theme_fddrh"]
default_font_size = 42

[sub_resource type="Theme" id="Theme_3cf5v"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_h2oc5")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MiddleContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
alignment = 1

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer/MiddleContainer"]
layout_mode = 2

[node name="BottomContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_fddrh")
alignment = 1

[node name="Score1" type="Label" parent="MarginContainer/VBoxContainer/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_3cf5v")
text = "0"

[node name="Separator" type="Label" parent="MarginContainer/VBoxContainer/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "-"

[node name="Score2" type="Label" parent="MarginContainer/VBoxContainer/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_3cf5v")
text = "0"
